--- a/gshop/index.html
+++ b/gshop/index.html
@@ -59,9 +59,9 @@
                         We offer you convenience of shopping everything that you need for your home.<br><br> buy  fresh fruits & vegetables, rice, dals, oil, packaged food, dairy item, frozen, pet food, household cleaning items & personal care products from a single virtual store.
                     </p>
 
-                    <h3>ADD-SELL-EARN</h3>
+                    <!-- <h3>ADD-SELL-EARN</h3>
                     <p>
-                    </p>
+                    </p> -->
                     
                 </div>
         
