--- a/gshop/cartItems.html
+++ b/gshop/cartItems.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles/cartcss.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header"><br>
 
             <a href="#" class="logo">
                 <img src="images/logo.png" alt="">
