--- a/gshop/buyerdashboard.html
+++ b/gshop/buyerdashboard.html
@@ -84,10 +84,11 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>fresh and <span>organic</span> products for you</h3>
+        <h3><span>ORDER ONLINE!!!</span></h3>
+        <h3><span>WE'LL DO SHOPPING FOR YOU</span></h3>
         <p>Best products at your doorstep</p>
         <p>Customer satisfaction is our primary goal</p>
-        <h3>SHOP NOW</h3>
+        <h3><span>SHOP NOW</span></h3>
     </div>
 
 </section>
@@ -148,57 +149,57 @@
 
         <div class="box">
             <img src="image/cat-2.png" alt="">
-            <h3>fruits&veggies</h3>
-            <p>upto 50% off</p>
+            <h3>fruits&veggies</h3><br>
+            <h2>upto 50% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\fruits&veg.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
-            <h3>foodgrains</h3>
-            <p>upto 10% off</p>
+            <h3>foodgrains</h3><br>
+            <h2>upto 10% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\foodgrains.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-3.png" alt="">
-            <h3>dairy products</h3>
-            <p>upto 45% off</p>
+            <h3>dairy products</h3><br>
+            <h2>upto 45% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\dairy.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
-            <h3>beverage</h3>
-            <p>upto 25% off</p>
+            <h3>beverage</h3><br>
+            <h2>upto 25% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\beverage.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
-            <h3>snacks</h3>
-            <p>upto 10% off</p>
+            <h3>snacks</h3><br>
+            <h2>upto 10% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\snacks.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
-            <h3>pet food</h3>
-            <p>upto 15% off</p>
+            <h3>pet food</h3><br>
+            <h2>upto 15% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\petfood.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
-            <h3>beauty&hygiene</h3>
-            <p>upto 30% off</p>
+            <h3>beauty&hygiene</h3><br>
+            <h2>upto 30% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\beauty&hygiene.html" class="btn">SHOW</a>
         </div>
         
         <div class="box">
             <img src="image/cat-4.png" alt="">
-            <h3>household products</h3>
-            <p>upto 20% off</p>
+            <h3>household products</h3><br>
+            <h2>upto 20% off</h2><br>
             <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\household.html" class="btn">SHOW</a>
         </div>
 
@@ -220,7 +221,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
-                <p>The vegetables are so fresh and hygienic.Extremely satisfied with the purchase.</p>
+                <h2>The vegetables are so fresh and hygienic.Extremely satisfied with the purchase.</h2><br>
                 <h3>RAVI</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -233,7 +234,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
-                <p>The pet food (Doggy chocos), I bought was extremely good at the best price.</p>
+                <h2>The pet food (Doggy chocos), I bought was extremely good at the best price.</h2><br>
                 <h3>AMIRTHA</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -246,7 +247,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
-                <p>The householdproduct (knife and carper), I bought was in best quality. I'm completely satisfied with the quality of the products.</p>
+                <h2>The householdproduct (knife and carper), I bought was in best quality. I'm completely satisfied with the quality of the products.</h2><br>
                 <h3>SUNDAR</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -259,7 +260,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
-                <p>The sunscreen was so good, it is giving results perfectly. The product is so good and having long warranty.</p>
+                <h2>The sunscreen was so good, it is giving results perfectly. The product is so good and having long warranty.</h2><br>
                 <h3>VANITHA</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
