--- a/gshop/buyerdashboard.html
+++ b/gshop/buyerdashboard.html
@@ -220,7 +220,7 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/pic-1.png" alt="">
+                <img src="https://i.pinimg.com/originals/06/03/7a/06037a96fea4891a9297e9ff48753065.png" alt="">
                 <h2>The vegetables are so fresh and hygienic.Extremely satisfied with the purchase.</h2><br>
                 <h3>RAVI</h3>
                 <div class="stars">
@@ -233,7 +233,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-2.png" alt="">
+                <img src="https://m.media-amazon.com/images/I/71NrhVNqHhL._SL1500_.jpg" alt="">
                 <h2>The pet food (Doggy chocos), I bought was extremely good at the best price.</h2><br>
                 <h3>AMIRTHA</h3>
                 <div class="stars">
@@ -246,7 +246,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-3.png" alt="">
+                <img src="C:\Users\RDCOM\Downloads\knife&carpet.jpeg" alt="">
                 <h2>The householdproduct (knife and carper), I bought was in best quality. I'm completely satisfied with the quality of the products.</h2><br>
                 <h3>SUNDAR</h3>
                 <div class="stars">
@@ -259,7 +259,7 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-4.png" alt="">
+                <img src="https://m.media-amazon.com/images/I/418yY0IrTwL._SY450_.jpg" alt="">
                 <h2>The sunscreen was so good, it is giving results perfectly. The product is so good and having long warranty.</h2><br>
                 <h3>VANITHA</h3>
                 <div class="stars">
@@ -288,7 +288,7 @@
 
         <div class="box">
             <h3> groco <i class="fas fa-shopping-basket"></i> </h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, saepe.</p>
+            <p>ABC Grocery Shop<br>Mylapore<br>Chennai-600001</p>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
