--- a/gshop/html/loginpage.html
+++ b/gshop/html/loginpage.html
@@ -1,39 +1,50 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>LoginPage</title>
-	<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap" rel="stylesheet">
-	<link href="styles/regcss.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>SignUp Page</title>
+	<!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- Font-->
+	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
+	<!-- Main Style Css -->
+    <link rel="stylesheet" href="../styles/regcss.css"/>
+    <style>
+        *{
+            margin-top: 20px;
+        }
+        .form-left img{
+            width: 100%;
+            padding-top: 0;
+            height: 100%;
+        }
+    </style>
 </head>
-<body>
-	<div class="banner-text">
-		<div class="div1">
-            <div class="form"><br><br>
-                <h1>WELCOME BACK..</h1><br>
-            <form   name="myForm"  method="post">
-                <label>Email: </label>
-                <input type="email" name="email"><br><br>
-        
-                <label>Password: </label>
-                <input type="text" name="password"><br><br>
-                <p> <a href="">Forget Password ?</a></p><br><br>
-                <center><button type="submit" form="form1" value="submit" onclick=" return validateForm()">&nbspLogin&nbsp</button></center>
-                <br><br>
-            </form>
-            </div> 
-        </div>
-        <div class="regimage">
-            <img src="images/simage.png">
-        </div>
+<body class="form-v4">
+	<div class="page-content">
+		<div class="form-v4-content">
+			<div class="form-left">
+				<h2>WELCOME BACK!<br> NICE TO SEE YOU AGAIN..</h2>
+				<div class="img">
+					<img src="../images/login.png">
+				</div>
+				
+			</div>
+			<form class="form-detail" action="#" method="post" id="myform">
+				<h2>LOGIN NOW</h2>
+				<div class="form-row">
+					<label for="first_name">UserName</label>
+					<input type="text" name="first_name" id="first_name" class="input-text">
+				</div>
+				<div class="form-row">
+					<label for="password">Password</label>
+					<input type="password" name="password" id="password" class="input-text" required>
+				</div>
+				<div class="form-row-last">
+					<input type="submit" name="register" class="register" value="Login">
+				</div>
+			</form>
+		</div>
 	</div>
-	<!-- <div class="animation-area">
-		<ul class="box-area">
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div> -->
 </body>
 </html>
