--- a/gshop/html/forgetPassword.html
+++ b/gshop/html/forgetPassword.html
@@ -2,7 +2,7 @@
 <head>
 	<title>forgotpage</title>
 	<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap" rel="stylesheet">
-	<link href="styles/regcss.css" rel="stylesheet">
+	<link href="../styles/regcss.css" rel="stylesheet">
 </head>
 <body>
 	<div class="banner-text">
