--- a/gshop/html/snacks.html
+++ b/gshop/html/snacks.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Snacks and Bakery Products</title>
-    <link rel="stylesheet" href="styles/css.css">
+    <link rel="stylesheet" href="../styles/css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="styles/indexcss.css">
+    <link rel="stylesheet" href="../styles/indexcss.css">
 </head>
 <body>
 
