--- a/gshop/html/beverage.html
+++ b/gshop/html/beverage.html
@@ -4,7 +4,7 @@
     <title>beverage</title>
     <link rel="stylesheet" href="styles/css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="styles/indexcss.css">
+        <link rel="stylesheet" href="../styles/indexcss.css">
 </head>
 <body>
 
