--- a/gshop/html/buyerdashboard.html
+++ b/gshop/html/buyerdashboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="./styles/buyerhome.css">
+    <link rel="stylesheet" href="../styles/buyerhome.css">
 
 </head>
 <body>
