--- a/gshop/html/buyerreg.html
+++ b/gshop/html/buyerreg.html
@@ -55,6 +55,10 @@
 					<label for="confirmpassword">Confirm-Password</label>
 					<input type="confirmpassword" name="confirmpassword" id="confirmpassword" class="input-text" required>
 				</div>
+				<div class="form-row">
+					<label for="confirmpassword">Confirm-Password</label>
+					<input type="confirmpassword" name="confirmpassword" id="confirmpassword" class="input-text" required>
+				</div>
 				<div class="form-row-last">
 					<input type="submit" name="register" class="register" value="Create Your Account">
 				</div>
