--- a/gshop/html/buyerdashboard.html
+++ b/gshop/html/buyerdashboard.html
@@ -151,56 +151,56 @@
             <img src="image/cat-2.png" alt="">
             <h3>fruits&veggies</h3><br>
             <h2>upto 50% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\fruits&veg.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\fruits&veg.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
             <h3>foodgrains</h3><br>
             <h2>upto 10% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\foodgrains.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\foodgrains.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-3.png" alt="">
             <h3>dairy products</h3><br>
             <h2>upto 45% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\dairy.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\dairy.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
             <h3>beverage</h3><br>
             <h2>upto 25% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\beverage.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\beverage.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
             <h3>snacks</h3><br>
             <h2>upto 10% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\snacks.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\snacks.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
             <h3>pet food</h3><br>
             <h2>upto 15% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\petfood.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\petfood.html" class="btn">SHOW</a>
         </div>
 
         <div class="box">
             <img src="image/cat-1.png" alt="">
             <h3>beauty&hygiene</h3><br>
             <h2>upto 30% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\beauty&hygiene.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\beauty&hygiene.html" class="btn">SHOW</a>
         </div>
         
         <div class="box">
             <img src="image/cat-4.png" alt="">
             <h3>household products</h3><br>
             <h2>upto 20% off</h2><br>
-            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\household.html" class="btn">SHOW</a>
+            <a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\household.html" class="btn">SHOW</a>
         </div>
 
     </div>
