--- a/gshop/html/dairy.html
+++ b/gshop/html/dairy.html
@@ -41,7 +41,7 @@
     
     <div class="box-container">
 
-        <div class="box" id="item1">
+        <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <center><img src="https://i.gifer.com/G3Iy.gif" alt=""></center>
