--- a/gshop/html/beauty&hygiene.html
+++ b/gshop/html/beauty&hygiene.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>beauty&hygiene</title>
-    <link rel="stylesheet" href="styles/css.css">
+    <link rel="stylesheet" href="../styles/css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles/indexcss.css">
 </head>
