--- a/gshop/html/carddetails.html
+++ b/gshop/html/carddetails.html
@@ -9,6 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
 	<!-- Main Style Css -->
     <link rel="stylesheet" href="../styles/regcss.css"/>
+
+	<link rel="stylesheet" href="../styles/css.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="../styles/indexcss.css">
 </head>
 <body class="form-v4">
 	<div class="page-content">
@@ -46,9 +50,11 @@
 					<label for="password">Password</label>
 					<input type="password" name="password" id="password" class="input-text" required>
 				</div>
-				<div class="form-row-last">
-					<input type="submit" name="register" class="register" value="PROCEED">
-				</div>
+				<div class="box-container">
+					<div class="box">
+						<a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\paymentmsg.html" class="btn">PROCEED</a>
+					</div>
+					</div>
 			</form>
 		</div>
 	</div>
