--- a/gshop/html/cod_details.html
+++ b/gshop/html/cod_details.html
@@ -7,8 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- Font-->
 	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
-	<!-- Main Style Css -->
+	<!-- Main Style css -->
     <link rel="stylesheet" href="../styles/regcss.css"/>
+
+	<link rel="stylesheet" href="../styles/css.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <link rel="stylesheet" href="../styles/indexcss.css">
 </head>
 <body class="form-v4">
 	<div class="page-content">
@@ -51,10 +55,13 @@
 					<label for="pincode">Pin-Code</label>
 					<input type="password" name="pincode" id="pincode" class="input-text" required>
 				</div>
-                
-				<div class="form-row-last">
-					<input type="submit" name="register" class="register" value="PROCEED">
+
+				<div class="box-container">
+				<div class="box">
+					<a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\orderdmsg.html" class="btn">PROCEED</a>
 				</div>
+				</div>
+
 			</form>
 		</div>
 	</div>
