--- a/gshop/html/cod_details.html
+++ b/gshop/html/cod_details.html
@@ -8,11 +8,11 @@
 	<!-- Font-->
 	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
 	<!-- Main Style css -->
-    <link rel="stylesheet" href="../styles/regcss.css"/>
+    <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\regcss.css"/>
 
-	<link rel="stylesheet" href="../styles/css.css">
+	<link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\css.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="../styles/indexcss.css">
+        <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\indexcss.css">
 </head>
 <body class="form-v4">
 	<div class="page-content">
@@ -58,7 +58,7 @@
 
 				<div class="box-container">
 				<div class="box">
-					<a href="C:\Users\RDCOM\Desktop\grocery git\grocery\gshop\html\orderdmsg.html" class="btn">PROCEED</a>
+					<a href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\html\orderdmsg.html" class="btn">PROCEED</a>
 				</div>
 				</div>
 
