--- a/gshop/html/beverage.html
+++ b/gshop/html/beverage.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>beverage</title>
-    <link rel="stylesheet" href="styles/css.css">
+    <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="../styles/indexcss.css">
+        <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\indexcss.css">
 </head>
 <body>
 
