--- a/gshop/html/buyerreg.html
+++ b/gshop/html/buyerreg.html
@@ -8,7 +8,7 @@
 	<!-- Font-->
 	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
 	<!-- Main Style Css -->
-    <link rel="stylesheet" href="../styles/regcss.css"/>
+    <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\regcss.css"/>
 </head>
 <body class="form-v4">
 	<div class="page-content">
