--- a/gshop/html/cancelmsg.html
+++ b/gshop/html/cancelmsg.html
@@ -3,7 +3,7 @@
         <title>Gshop</title>
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="../styles/indexcss.css">
+        <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\indexcss.css">
     </head>
     <body>
         <header class="header">
