--- a/gshop/html/cartItems.html
+++ b/gshop/html/cartItems.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Cart Items</title>
-        <link rel="stylesheet" href="../styles/cartcss.css">
+        <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\cartcss.css">
     </head>
     <body>
         <header class="header">
