--- a/gshop/html/groco.html
+++ b/gshop/html/groco.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\buyerhome.css">
 
 </head>
 <body>
