--- a/gshop/html/loginpage.html
+++ b/gshop/html/loginpage.html
@@ -8,7 +8,7 @@
 	<!-- Font-->
 	<link rel="stylesheet" type="text/css" href="fonts/line-awesome/css/line-awesome.min.css">
 	<!-- Main Style Css -->
-    <link rel="stylesheet" href="../styles/regcss.css"/>
+    <link rel="stylesheet" href="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\styles\regcss.css"/>
     <style>
         *{
             margin-top: 20px;
