--- a/gshop/html/index.html
+++ b/gshop/html/index.html
@@ -37,8 +37,8 @@
                     <br>
                     <div class="buy">
                         <button class="lrbtn" id="buyer">FOR BUYER</button>
-                        <button class="bbtn" onclick="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\html\regPage.html">Register</button>
-                        <button class="bbtn" onclick="C:\Users\RDCOM\OneDrive\Desktop\grocery git\grocery\gshop\html\loginpage.html">Login</button>
+                        <button class="bbtn" onclick="">Register</button>
+                        <button class="bbtn" onclick="">Login</button>
                     </div>
                 </div>
             </div>
